Address review lint comments